# 05_editor

./: .travis.yml  BasicPrimitiveCreator_8h.html  BasicPrimitiveCreator_8h__dep__incl.map  BasicPrimitiveCreator_8h__dep__incl.md5  BasicPrimitiveCreator_8h__incl.map  BasicPrimitiveCreator_8h__incl.md5  BasicPrimitiveCreator_8h_source.html  BlackAndWhiteFigure_8h.html  BlackAndWhiteFigure_8h__dep__incl.map  BlackAndWhiteFigure_8h__dep__incl.md5  BlackAndWhiteFigure_8h__incl.map  BlackAndWhiteFigure_8h__incl.md5  BlackAndWhiteFigure_8h_source.html  BlackWhitePrimitiveCreator_8h.html  BlackWhitePrimitiveCreator_8h__dep__incl.map  BlackWhitePrimitiveCreator_8h__dep__incl.md5  BlackWhitePrimitiveCreator_8h__incl.map  BlackWhitePrimitiveCreator_8h__incl.md5  BlackWhitePrimitiveCreator_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  Color.h  Color_8h.html  Color_8h__dep__incl.map  Color_8h__dep__incl.md5  Color_8h__incl.md5  Color_8h_source.html  ConcreteFigures_8cpp.html  ConcreteFigures_8cpp__incl.map  ConcreteFigures_8cpp__incl.md5  ConcreteFigures_8h.html  ConcreteFigures_8h__dep__incl.map  ConcreteFigures_8h__dep__incl.md5  ConcreteFigures_8h__incl.map  ConcreteFigures_8h__incl.md5  ConcreteFigures_8h_source.html  DataBaseEditor_8h.html  DataBaseEditor_8h__dep__incl.map  DataBaseEditor_8h__dep__incl.md5  (+265 more)
BW/: BlackAndWhiteFigure.h  BlackWhitePrimitiveCreator.h
RGB/: RGBFigure.h  RGBPrimitiveCreator.h
include/: BasicPrimitiveCreator.h  ConcreteFigures.h  EditorCore.h  FigureContainer.h  GraphicEditor.h  IDocumentEditor.h  IGraphicPrimitiveCreator.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+43 more)
test/: CMakeLists.txt  DisplayPrimitive.cpp  DocumentImportExport.cpp  NewDocument.cpp  StorageTest.cpp
(+11 files in other folders)
